--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,27 +2,36 @@
 springdoc.swagger-ui.path=/api.html
 
 #Configuracao Hibernate
-spring.datasource.hikari.connectionTimeout=20000
-spring.datasource.hikari.maximumPoolSize=5
-spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.hikari.connectionTimeout=20000
+#spring.datasource.hikari.maximumPoolSize=5
+spring.flyway.enabled: false
 
-db.configurations.cliente_1.url: jdbc:postgresql://localhost:5432/desafio_conductor
-db.configurations.cliente_1.username: postgres
-db.configurations.cliente_1.password: 123
-db.configurations.cliente_1.driver: org.postgresql.Driver
-
-db.configurations.cliente_2.url: jdbc:postgresql://localhost:5432/desafio_conductor_2
-db.configurations.cliente_2.username: postgres
-db.configurations.cliente_2.password: 123
-db.configurations.cliente_2.driver: org.postgresql.Driver
-
-
-#db.configurations.cliente_1.url: jdbc:postgresql://postgresbd:5432/desafio_conductor
+#db.configurations.cliente.url: jdbc:postgresql://localhost:5432/desafio_conductor
+#db.configurations.cliente.username: postgres
+#db.configurations.cliente.password: 123
+#db.configurations.cliente.driver: org.postgresql.Driver
+#
+#db.configurations.cliente_1.url: jdbc:postgresql://localhost:5432/desafio_conductor_1
 #db.configurations.cliente_1.username: postgres
-#db.configurations.cliente_1.password: admin
+#db.configurations.cliente_1.password: 123
 #db.configurations.cliente_1.driver: org.postgresql.Driver
 #
-#db.configurations.cliente_2.url: jdbc:postgresql://postgresbd_1:5432/desafio_conductor
+#db.configurations.cliente_2.url: jdbc:postgresql://localhost:5432/desafio_conductor_2
 #db.configurations.cliente_2.username: postgres
-#db.configurations.cliente_2.password: admin
+#db.configurations.cliente_2.password: 123
 #db.configurations.cliente_2.driver: org.postgresql.Driver
+
+db.configurations.cliente.url: jdbc:postgresql://postgresbd:5432/desafio_conductor
+db.configurations.cliente.username: postgres
+db.configurations.cliente.password: admin
+db.configurations.cliente.driver: org.postgresql.Driver
+
+db.configurations.cliente_1.url: jdbc:postgresql://postgresbd_1:5432/desafio_conductor
+db.configurations.cliente_1.username: postgres
+db.configurations.cliente_1.password: admin
+db.configurations.cliente_1.driver: org.postgresql.Driver
+
+db.configurations.cliente_2.url: jdbc:postgresql://postgresbd_2:5432/desafio_conductor
+db.configurations.cliente_2.username: postgres
+db.configurations.cliente_2.password: admin
+db.configurations.cliente_2.driver: org.postgresql.Driver
