--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,9 +4,7 @@ services:
     image: postgres:latest
     container_name: docker_desafio_conductor_bd
     volumes:
-      - postgres-data:/var/lib/postgresql/data      
-      - ./schema.sql:/init.sql
-       
+      - postgres-data:/var/lib/postgresql/data
     expose:
     - 5432
     ports:
@@ -21,11 +19,24 @@ services:
     container_name: docker_desafio_conductor_bd_1
     volumes:
       - postgres-data_1:/var1/lib/postgresql/data
-      - ./schema.sql:/init.sql
     expose:
     - 5433
     ports:
       - 5433:5433
+    environment:
+         - POSTGRES_PASSWORD=admin
+         - POSTGRES_USER=postgres
+         - POSTGRES_DB=desafio_conductor
+    restart: always
+  postgresbd_2:
+    image: postgres:latest
+    container_name: docker_desafio_conductor_bd_2
+    volumes:
+      - postgres-data_2:/var2/lib/postgresql/data
+    expose:
+    - 5434
+    ports:
+      - 5434:5434
     environment:
          - POSTGRES_PASSWORD=admin
          - POSTGRES_USER=postgres
@@ -45,9 +56,11 @@ services:
     depends_on:
       - postgresbd
       - postgresbd_1
+      - postgresbd_2
     links:
       - postgresbd
       - postgresbd_1
+      - postgresbd_2
 volumes:
   postgres-data:
   postgres-data_1:
