--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,14 @@
 			<scope>runtime</scope>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.flywaydb/flyway-core -->
+		<dependency>
+			<groupId>org.flywaydb</groupId>
+			<artifactId>flyway-core</artifactId>
+			<version>7.5.2</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
